hydroflow_datalog_core/src/snapshots/hydroflow_datalog_core__tests__send_to_node@surface_graph.snap
---
source: hydroflow_datalog_core/src/lib.rs
expression: flat_graph_ref.surface_syntax_string()
---
1v1 = merge ();
2v1 = unique :: < 'tick > ();
3v1 = tee ();
4v1 = merge ();
5v1 = unique :: < 'tick > ();
6v1 = tee ();
7v1 = source_stream (ints);
8v1 = for_each (| v | result . send (v) . unwrap ());
9v1 = merge ();
10v1 = unique :: < 'tick > ();
11v1 = for_each (| (node , data) | async_send_result (node , data));
12v1 = source_stream (async_receive_result);
13v1 = map (| row : (_ , _ ,) | (row . 0 , row . 1 ,));
14v1 = map (| v : (_ , _ ,) | (v . 1 , (v . 0 ,)));

2v1 -> 3v1;
1v1 -> 2v1;
5v1 -> 6v1;
4v1 -> 5v1;
7v1 -> 1v1;
6v1 -> 8v1;
10v1 -> 11v1;
9v1 -> 10v1;
12v1 -> 4v1;
14v1 -> 9v1;
13v1 -> 14v1;
3v1 -> 13v1;

